--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,13 @@
   font-family: "Merriweather", serif;
 
 }
+
+/* .rdt_TableHead .rdt_TableCol {
+  white-space: normal !important;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  line-height: 1.2;
+  max-width: 150px;
+  text-align: center;
+} */
+
